frontendy things; fix collapsed top right menu

--- a/app/assets/stylesheets/bootstrap-custom-variables.scss
+++ b/app/assets/stylesheets/bootstrap-custom-variables.scss
@@ -4,11 +4,11 @@
 $body-bg: #fff;
 $brand-primary: $braveOrange;
 $input-color: $darkGray;
-$input-color-placeholder: $gray;
+$input-color-placeholder: hsla(0, 0%, 80%, 1);
 $jumbotron-bg: #fff;
 $jumbotron-padding: 15px;
-$navbar-height: 30px;
 $navbar-default-bg: #fafafa;
+$navbar-height: 30px;
 $padding-base-vertical: 9px;
 $pre-bg: #fff;
 $text-color: hsla(0, 0%, 30%, 1);
