--- a/app/assets/stylesheets/partials/nav.sass
+++ b/app/assets/stylesheets/partials/nav.sass
@@ -7,6 +7,16 @@ nav
     margin-right: 8px
     height: 32px
     width: 32px
-  // .navbar-brand,
-  // .navbar-nav > li > a
-  //   line-height: 22px
+  .navbar-brand,
+  .navbar-nav > li > a
+    padding-bottom: 0
+    padding-top: 0
+    line-height: 32px
+  .navbar-left > li
+    float: left
+  .navbar-right > li
+    float: right
+  img.verified-icon
+    margin-right: 10px
+  .log-out
+    color: $gray
